--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <!-- Photo Banner -->
   <section id="photo-banner">
-    <img src="assets/images/banner-revou.jpg" alt="Company Banner" />
+    <img src="img/dun.jpg" alt="Company Banner" />
   </section>
 
   <!-- Our Headquarter -->
@@ -42,19 +42,19 @@
     <div class="locations">
       <div class="circle-group">
         <div class="circle">
-          <img src="assets/images/jakarta.jpg" alt="Jakarta">
+          <img src="img/jakarta.jpg" alt="Jakarta">
         </div>
         <span class="circle-label">Jakarta</span>
       </div>
       <div class="circle-group">
         <div class="circle">
-          <img src="assets/images/bandung.png" alt="Bandung">
+          <img src="img/bandung.png" alt="Bandung">
         </div>
         <span class="circle-label">Bandung</span>
       </div>
       <div class="circle-group">
         <div class="circle">
-          <img src="assets/images/surabaya.jpg" alt="Surabaya">
+          <img src="img/surabaya.jpg" alt="Surabaya">
         </div>
         <span class="circle-label">Surabaya</span>
       </div>
